--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ h1{
   margin: auto;
   padding:10px 20px 50px;
   border-radius: 12px;
-  background-color: red;
+  background-image: linear-gradient(180deg, rgb(9, 42, 144), #00160d,rgb(9, 42, 144) );
 }
 @media only screen and (max-width: 767px) {
   .container{
