--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ h1{
 @media only screen and (max-width: 767px) {
   .container{
     width: 100vw;
-    height: 500px
+    background-color:red;
+    height: 300px
     
   }
 }
